[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-pac-bench"
requires-python = ">=3.11"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "datasets>=3.0.0",
  "gradio==4.44.1",
  "gradio_leaderboard==0.0.11",
  "Jinja2==3.1.4",
  "pandas==2.2.3",
  "pydantic==2.9.1",
  "tabulate==0.9.0",
]

dynamic = ["version"]

[project.scripts]
polaris-pac-bench = "polaris_pac_bench.main:main"

[project.optional-dependencies]
dev = [
  "build>=1.0.3",
  "pytest>=8.0.0",
  "pre-commit>=2.4.0",
  "black",
  "isort",
]

[tool.setuptools.dynamic]
version = {attr = "polaris_pac_bench.__version__.__version__"}

[tool.setuptools]
package-dir = { "polaris_pac_bench" = "polaris_pac_bench" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150
