[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bench-automation"
requires-python = ">=3.11"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "boto3==1.35.64",
  "datasets>=3.0.0",
  "gradio[oauth]==4.44.1",
  "gradio_leaderboard==0.0.13",
  "Jinja2==3.1.4",
  "pandas==2.2.3",
  "passlib[bcrypt]==1.7.4",
  "pydantic==2.9.1",
  "python-jose[cryptography]==3.3.0",
  "tabulate==0.9.0",
  "urllib3>=2.2.2",
  "transformers>=4.47.0",
]

dynamic = ["version"]

[project.scripts]
agent-bench-automation = "agent_bench_automation.main:main"

[project.optional-dependencies]
dev = [
  "build>=1.0.3",
  "pyclean",
  "pytest>=8.0.0",
  "pre-commit>=2.4.0",
  "black",
  "isort",
]

[tool.setuptools.dynamic]
version = {attr = "agent_bench_automation.__version__.__version__"}

[tool.setuptools]
package-dir = { "agent_bench_automation" = "agent_bench_automation" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | caa-agent
  | caa-bundle
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150

[tool.semantic_release.publish]
upload_to_vcs_release = false